# backend/swagger-output.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/api/categories/CreateCategory": {
+    "/categories/CreateCategory": {
       "post": {
         "description": "",
         "responses": {
@@ -46,11 +46,11 @@
           }
         },
         "tags": [
-          "api"
+          "categories"
         ]
       }
     },
-    "/api/categories/GetAllCategories": {
+    "/categories/GetAllCategories": {
       "get": {
         "description": "",
         "responses": {
@@ -62,11 +62,11 @@
           }
         },
         "tags": [
-          "api"
+          "categories"
         ]
       }
     },
-    "/api/categories/GetCategoryById/{id}": {
+    "/categories/GetCategoryById/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -91,11 +91,11 @@
           }
         },
         "tags": [
-          "api"
+          "categories"
         ]
       }
     },
-    "/api/categories/UpdateCategory/{id}": {
+    "/categories/UpdateCategory/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -143,11 +143,11 @@
           }
         },
         "tags": [
-          "api"
+          "categories"
         ]
       }
     },
-    "/api/categories/DeleteCategory/{id}": {
+    "/categories/DeleteCategory/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -172,11 +172,11 @@
           }
         },
         "tags": [
-          "api"
+          "categories"
         ]
       }
     },
-    "/api/workouts/CreateWorkout": {
+    "/workouts/CreateWorkout": {
       "post": {
         "description": "",
         "responses": {
@@ -214,11 +214,11 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
         ]
       }
     },
-    "/api/workouts/GetAllWorkouts": {
+    "/workouts/GetAllWorkouts": {
       "get": {
         "description": "",
         "responses": {
@@ -230,11 +230,11 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
         ]
       }
     },
-    "/api/workouts/GetWorkoutById/{id}": {
+    "/workouts/GetWorkoutById/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -259,11 +259,11 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
         ]
       }
     },
-    "/api/workouts/GetWorkoutsByCategory/{categoryId}": {
+    "/workouts/GetWorkoutsByCategory/{categoryId}": {
       "get": {
         "description": "",
         "parameters": [
@@ -285,11 +285,11 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
         ]
       }
     },
-    "/api/workouts/UpdateWorkout/{id}": {
+    "/workouts/UpdateWorkout/{id}": {
       "put": {
         "description": "",
         "parameters": [
@@ -337,11 +337,11 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
         ]
       }
     },
-    "/api/workouts/DeleteWorkout/{id}": {
+    "/workouts/DeleteWorkout/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -366,7 +366,129 @@
           }
         },
         "tags": [
-          "api"
+          "workouts"
+        ]
+      }
+    },
+    "/admin/CreateAdmin": {
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "admin_username": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "name": {
+                    "example": "any"
+                  },
+                  "role": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/admin/AdminLogin": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "admin_username": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/admin/CheckUserLogin": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "admin"
+        ]
+      }
+    },
+    "/admin/LogoutAdmin": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "tags": [
+          "admin"
         ]
       }
     }
